<resources>
    <string name="app_name">GameExangeApp</string>
    <string name="title_activity_login">Login</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_confirm_password">Las contraseñas deben ser iguales</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_incorrect_username_or_password">Datos incorrectos</string>

    <!-- Lista de productos -->
    <string name="error_producto">Ha ocurrido un error al cargar el producto, intentalo de nuevo más tarde.</string>

    <!-- DRAWER -->
    <string name="title_activity_base_drawer">BaseDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Ajustes</string>
    <string name="drawer_mis_productos">Mis productos</string>
    <string name="drawer_videojuegos_deseados">Videojuegos deseados</string>
    <string name="drawer_mis_chats">Mis chats</string>
    <string name="drawer_compartir">Invita a tus amigos</string>

    <!-- Creación de productos -->
    <string name="crear_nombre_producto">¿Qué quieres vender?</string>
    <string name="crear_precio_producto">¿Cuanto quieres recibir?</string>
    <string name="crear_descripcion_producto">Descríbenos un poco tu producto&#8230;</string>
    <string name="crear_videojuego_producto">¿De qué videojuego es tu producto?</string>
    <string name="crear_fotos_producto">¡Sube alguna foto!</string>
    <string name="crear_fotos_subir_foto">Subir de la galería</string>
    <string name="crear_fotos_hacer_foto">Hacer foto nueva</string>
    <string name="crear_btn_producto">¡Ponlo ya a la venta!</string>
    <string name="error_foto_producto">Debes subir almenos una foto!</string>
    <string name="error_nombre_producto">El nombre del producto es obligatorio</string>
    <string name="error_nombre_corto_producto">Este nombre es demasiado corto para el producto</string>
    <string name="error_precio_producto">La descripción del producto es obligatoria</string>
    <string name="error_precio_formato_producto">No es un precio válido</string>
    <string name="error_descripcion_producto">La descripción del producto es obligatoria</string>
    <string name="error_descripcion_corto_producto">Esta descripción es demasiado corta para el producto</string>
    <string name="error_videojuego_producto">Es obligatorio escoger un videojuego!</string>


    <!-- ERRORES DE PERMISOS -->
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_videojuego_list">VideojuegoListActivity</string>
    <string name="title_activity_filtros_busqueda_producto">FiltrosBusquedaProducto</string>
    <string name="title_activity_obtener_localizacion">Map</string>
    <string name="title_activity_resultados_busqueda">ResultadosBusqueda</string>
</resources>
